[gd_scene load_steps=7 format=3 uid="uid://c6c221fld2khi"]

[ext_resource type="Script" uid="uid://dt064r7g5spd6" path="res://TankWars/Sensors/radar.gd" id="1_sjdv2"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="2_epnyi"]
[ext_resource type="Script" uid="uid://dtlmgewt76wtf" path="res://addons/godot_state_charts/parallel_state.gd" id="3_k2bxq"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="4_f37m6"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="5_cgwxm"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="6_epnyi"]

[node name="Radar" type="Node2D"]
script = ExtResource("1_sjdv2")

[node name="Behavior" type="Node" parent="."]
script = ExtResource("2_epnyi")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="Announcements" type="Node" parent="Behavior"]
script = ExtResource("3_k2bxq")
metadata/_custom_type_script = "uid://dtlmgewt76wtf"

[node name="AnnounceEnemy" type="Node" parent="Behavior/Announcements"]
script = ExtResource("4_f37m6")
initial_state = NodePath("NoEnemy")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="NoEnemy" type="Node" parent="Behavior/Announcements/AnnounceEnemy"]
script = ExtResource("5_cgwxm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="enemy_sighted" type="Node" parent="Behavior/Announcements/AnnounceEnemy/NoEnemy"]
script = ExtResource("6_epnyi")
to = NodePath("../../EnemySighted")
event = &"enemy_sighted"
delay_in_seconds = "0.0"

[node name="EnemySighted" type="Node" parent="Behavior/Announcements/AnnounceEnemy"]
script = ExtResource("5_cgwxm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="enemy_lost" type="Node" parent="Behavior/Announcements/AnnounceEnemy/EnemySighted"]
script = ExtResource("6_epnyi")
to = NodePath("../../NoEnemy")
event = &"enemy_lost"
delay_in_seconds = "0.0"

[node name="AnnounceObstacles" type="Node" parent="Behavior/Announcements"]
script = ExtResource("4_f37m6")
initial_state = NodePath("Checking")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Checking" type="Node" parent="Behavior/Announcements/AnnounceObstacles"]
script = ExtResource("5_cgwxm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="obstacle_sighted" type="Node" parent="Behavior/Announcements/AnnounceObstacles/Checking"]
script = ExtResource("6_epnyi")
to = NodePath("../../Waiting")
event = &"obstacle_sighted"
delay_in_seconds = "0.0"

[node name="Waiting" type="Node" parent="Behavior/Announcements/AnnounceObstacles"]
script = ExtResource("5_cgwxm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="check" type="Node" parent="Behavior/Announcements/AnnounceObstacles/Waiting"]
script = ExtResource("6_epnyi")
to = NodePath("../../Checking")
delay_in_seconds = "1.0"

[connection signal="state_processing" from="Behavior/Announcements/AnnounceEnemy/NoEnemy" to="." method="_on_no_enemy_state_processing"]
[connection signal="taken" from="Behavior/Announcements/AnnounceEnemy/NoEnemy/enemy_sighted" to="." method="_on_enemy_sighted_taken"]
[connection signal="state_processing" from="Behavior/Announcements/AnnounceEnemy/EnemySighted" to="." method="_on_enemy_sighted_state_processing"]
[connection signal="taken" from="Behavior/Announcements/AnnounceEnemy/EnemySighted/enemy_lost" to="." method="_on_enemy_lost_taken"]
[connection signal="state_processing" from="Behavior/Announcements/AnnounceObstacles/Checking" to="." method="_on_checking_state_processing"]
[connection signal="taken" from="Behavior/Announcements/AnnounceObstacles/Checking/obstacle_sighted" to="." method="_on_obstacle_sighted_taken"]
